--- a/public/index.html
+++ b/public/index.html
@@ -12,17 +12,17 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://pjpportfolio.netlify.app/">
+    <meta property="og:url" content="https://assassin-portfolio.vercel.app/">
     <meta property="og:title" content="Mark Barton | Game developer">
     <meta property="og:description" content="An innovative front-end developer with a keen eye for aesthetics as well as experience building and maintaining responsive, functional, and interactive websites of good standards.">
-    <meta property="og:image" content="https://pjpportfolio.netlify.app/images/favicon.png">
+    <meta property="og:image" content="https://assassin-portfolio.vercel.app//images/favicon.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://pjpportfolio.netlify.app/">
+    <meta property="twitter:url" content="https://assassin-portfolio.vercel.app/">
     <meta property="twitter:title" content="Mark Barton | Game developer">
     <meta property="twitter:description" content="An innovative front-end developer with a keen eye for aesthetics as well as experience building and maintaining responsive, functional, and interactive websites of good standards.">
-    <meta property="twitter:image" content="https://pjpportfolio.netlify.app/images/favicon.png">
+    <meta property="twitter:image" content="https://assassin-portfolio.vercel.app//images/favicon.png">
 
     <!-- Google Verification -->
     <meta name="google-site-verification" content="iXiLuNPlMIfmdJ_jK7TAijoK7VkpplkQerNIRQH5vOQ" />
