Updated the index.html

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <!-- Primary Meta Tags -->
     <title>Mark Barton | Game developer</title>
     <meta name="title" content="Mark Barton | Game developer">
-    <meta name="keywords" content="Mark Barton, Portfolio, pjpportfolio, pjp, PJP, Pappyjay, Front-End Developer, Developer, Nigeria">
+    <meta name="keywords" content="Mark Barton, Portfolio, Unity, BlockChain, Developer">
     <meta name="description" content="An innovative front-end developer with a keen eye for aesthetics as well as experience building and maintaining responsive, functional, and interactive websites of good standards.">
 
     <!-- Open Graph / Facebook -->
